--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <span>Good Life Begins With A Good Company</span>
         <span>Create A Better Future For Yourself</span>
         <br>
-        <button>Contact Us</button>
+        <button routerLink="/about">Contact Us</button>
     </div>
     <div class="row">
         <div class="col-6">
