--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="nav">
   <div class="logo">
-    <a routerLink="/home">RailWorld</a>
+    <!-- <a routerLink="/home">RailWorld</a> -->
+    <img  routerLink="/home" src="/assets/logo.png" alt="Loding.....">
   </div>
   <ul class="menu">
     <li><a routerLink="/about">About</a></li>
