second commit of railworld ffrontend

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,25 @@
-<p>about works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <img src="assets/service-home.jpg" alt="Loading.....">
+        <div class="card">
+            <h1>About</h1>
+            <span><a routerLink="/home">Home</a> > About Us</span>
+            
+        </div>
+
+    </div>
+    <div class="row">
+        <h2>IT and Software Developper</h2>
+        <p>Railworld India is an globally IT/Software developing company who has best IT solutions provider specializing in services for coding in the industry of IT/Software Development as well as end users.
+    
+            We strive to help organizations better understand how the world of work is changing, the forces that are shaping it and how to win in this environment. When you are looking for your virtual presence Turnaround Time and a whole bunch of other things will be spinning through your head.
+            
+            Railworld India as the name suggests leading top software and IT process. IT/Software Industry is mandatory need as per the global virtual presence. As company mainly focuses on Railworld India manages the entire software and app profiling through the on-boarding of the new hire, including staff, technology, method and reporting. As Railworld India we take the complete ownership of client's requirments and improve a company's time to hire, increase the quality of the services verifiable metrics, reduce cost and improve governmental compliance.
+            
+            Software development is a rapidly-changing field and software developers need to stay up-to-date on the latest advancements regarding the tools, frameworks, programming languages, and apps to achieve success. You can master the latest coding tools, strategies, and techniques through Simplilearn’s acclaimed Software Development courses.
+            At present, we are all surrounded by software. The number of individuals using computers in 2008 throughout the world crosses 1 billion. In 2019 there are 5.11 billion mobile users in the world. We know that all of these devices are functioning by an operating system that is a piece of software with lots of integrated functions. This is the function of the software. However, individuals and businesses throughout the world use software for many reasons and gaining lots of benefits. It is used in transportation, electrical grids, nuclear plants, and other functions that offer the basics of life.
+            
+            It is very important for businesses as it helps them distinguish from competitors and become more competitive. Software development can improve the client’s experiences, bring more feature-rich and innovative products to market, and make setups more safe, productive, and efficient. Digitization of information and storing it online will not only save space but also integrates and centralizes it so that it is easy to access for those who need it. Also, it is easy to protect your data from outsiders. When the business develops, the pool of data gains volume, and storing this data efficiently will become a point of focus for the company. For this, businesses need to develop and upgrade digital organization so that they can keep on providing consistent performance for those who utilize this data. Also, software development is essential for data analysis. The data collected from day to day tasks, when combined with the right software, can be utilized by businesses to keep a record of the trends among their clients.</p>
+            <button>Contact Us</button>
+    </div>
+</div>
