--- a/src/app/android-page/android-page.component.html
+++ b/src/app/android-page/android-page.component.html
@@ -3,8 +3,13 @@
         <img src="assets/service-home.jpg" alt="Loading.....">
         <div class="card">
             <h1>Service</h1>
-            <span><a routerLink="/home">Home</a> > Web Development</span>
+            <span><a routerLink="/home">Home</a> > Android Development</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
             
         </div>
+        <div class="col-6"></div>
     </div>
 </div>
