--- a/src/app/industries/news-page/news-page.component.html
+++ b/src/app/industries/news-page/news-page.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
-        <img src="assets/service-home.jpg" alt="Loading.....">
+        <img src="assets/industry-page.jpg" alt="Loading.....">
         <div class="card">
             <h1>Service</h1>
-            <span><a routerLink="/home">Home</a> > Web Development</span>
+            <span><a routerLink="/home">Home</a> > Software Development</span>
             
         </div>
     </div>
